# geek42

./: .coderabbit.yaml  .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  SECURITY.md  data.json  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/projects/-home-user-src-geek42/memory/: MEMORY.md  feedback_uv_lock.md
.gemini/: config.yaml  styleguide.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  codex-instructions.md  copilot-instructions.md  dependabot.yml  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  codeql.yml  coverage-comment.yml  dependabot-regen.yml  dependency-review.yml  gitleaks.yml  lint.yml  osv-scan.yml  pre-commit.yml  release-test.yml  release.yml  scorecard.yml  security-lint.yml  test-report.yml  test.yml  typecheck.yml
badges/: python.json  ruff.json  ty.json  uv.json
docs/: attestation-verification.md  devops.md  news-format.md  openssf-badge-roadmap.md  openssf-best-practices.md  pypi-attestations-cli-research.md  release-setup.md  security-setup.md  security.md  style-guide.md  testing-policy.md  user-guide.md
docs/research/: multi-platform-scv.md  policy-as-code-badges.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_8c02bf34ef7c6bbb___init___py.html  z_8c02bf34ef7c6bbb___main___py.html  z_8c02bf34ef7c6bbb_blog_py.html  z_8c02bf34ef7c6bbb_cli_py.html  z_8c02bf34ef7c6bbb_compose_py.html  z_8c02bf34ef7c6bbb_errors_py.html  z_8c02bf34ef7c6bbb_feeds_py.html  z_8c02bf34ef7c6bbb_linter_py.html  z_8c02bf34ef7c6bbb_manifest_py.html  z_8c02bf34ef7c6bbb_models_py.html  z_8c02bf34ef7c6bbb_parser_py.html  z_8c02bf34ef7c6bbb_renderer_py.html  z_8c02bf34ef7c6bbb_scaffold_py.html  z_8c02bf34ef7c6bbb_site_py.html  z_8c02bf34ef7c6bbb_tracker_py.html  z_d68dfb6d20b40d6a_config_py.html  z_d68dfb6d20b40d6a_download_artifacts_py.html  z_d68dfb6d20b40d6a_download_proofs_py.html  z_d68dfb6d20b40d6a_net_py.html
metadata/: layout.conf
packaging/: README.md
packaging/debian/: changelog  control  copyright  geek42.manpages  rules  watch
packaging/gentoo/app-text/geek42/: Manifest  geek42-0.2.0.ebuild  geek42-0.3.0.ebuild  geek42-0.4.0.ebuild  geek42-0.4.2_alpha7.ebuild  geek42-9999.ebuild  metadata.xml
packaging/rpm/: geek42.spec
scripts/: audit.py  check_signatures.py  check_version.py  download_artifacts.py  download_release.py  gen_ebuild.py  regen_badges.py  regen_requirements.py  verify_cosign.py  verify_provenance.py  verify_pure.py
src/geek42/: __init__.py  __main__.py  advisory.py  blog.py  cli.py  compose.py  errors.py  feeds.py  github.py  linter.py  logging.py  manifest.py  models.py  parser.py  renderer.py  scaffold.py  site.py  tracker.py
src/geek42/templates/: base.html.j2  index.html.j2  post.html.j2  style.css
src/pyscv/: config.py  download_artifacts.py  download_proofs.py  net.py
test_vectors/news/: all-optional-headers.en.txt  minimal.en.txt  multiple-authors.en.txt  unicode-body.en.txt  valid-format1.en.txt  valid-format2.en.txt
test_vectors/xss/: event-handler.en.txt  javascript-url.en.txt  script-in-body.en.txt
tests/: conftest.py  test_advisory.py  test_blog.py  test_cli.py  test_cli_commands.py  test_cli_helpers.py  test_compose.py  test_download_artifacts.py  test_download_proofs.py  test_entry_point.py  test_feeds.py  test_github.py  test_integration.py  test_linter.py  test_logging.py  test_manifest.py  test_net.py  test_parser.py  test_renderer.py  test_safety.py  test_site.py  test_tracker.py  test_vectors.py
tests/property/: test_parser_properties.py  test_renderer_properties.py
