[project]
name = "geek42"
version = "0.4.2a10"
description = "Convert GLEP 42 Gentoo news repositories into static blogs"
readme = "README.md"
license = "CC0-1.0"
requires-python = ">=3.13"
authors = [{ name = "Ivan Anishchuk", email = "ivan@agorism.org" }]
keywords = ["gentoo", "glep42", "news", "static-site", "rss", "atom"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: System :: Software Distribution",
    "Topic :: Text Processing :: Markup :: HTML",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "jinja2>=3.1",
    "typer>=0.15",
    "rich>=13.0",
    "markdown>=3.5",
    "gemato>=20",
    "httpx>=0.28",
]

[project.urls]
Homepage = "https://github.com/IvanAnishchuk/geek42"
Documentation = "https://github.com/IvanAnishchuk/geek42/blob/main/docs/news-format.md"
Repository = "https://github.com/IvanAnishchuk/geek42"
Issues = "https://github.com/IvanAnishchuk/geek42/issues"
Changelog = "https://github.com/IvanAnishchuk/geek42/blob/main/CHANGELOG.md"
Security = "https://github.com/IvanAnishchuk/geek42/blob/main/SECURITY.md"

[project.scripts]
geek42 = "geek42.cli:main"

[dependency-groups]
dev = [
    "uv>=0.7",
    "ruff>=0.11",
    "ty",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pip-audit>=2.7",
    "pre-commit>=4.0",
    "pypi-attestations>=0.0.18",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geek42", "src/pyscv"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/README.md",
    "/LICENSE.md",
    "/CHANGELOG.md",
    "/SECURITY.md",
    "/pyproject.toml",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit (security)
    "BLE",  # flake8-blind-except
    "TRY",  # tryceratops
]
ignore = [
    "S404",  # subprocess import is audited and necessary for git ops
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",  # assert is fine in tests
    "S603",  # subprocess with validated input (fixture setup)
    "S607",  # partial git path in test setup
    "S314",  # xml.etree is fine for parsing our own generated test output
    "BLE001", # broad Exception in test fixtures
]

[tool.pytest.ini_options]
addopts = [
    "--cov=geek42",
    "--cov=pyscv",
    "--cov-config=pyproject.toml",
    "--cov-report=term-missing",
    "--cov-report=html:.reports/test/htmlcov",
    "--cov-report=xml:.reports/test/coverage.xml",
    "--junitxml=.reports/test/test-results.xml",
    "-ra",
]
junit_family = "xunit2"
junit_logging = "all"
junit_log_passing_tests = false

[tool.coverage.run]
source_pkgs = ["geek42", "pyscv"]
branch = true
relative_files = true

[tool.coverage.report]
fail_under = 75
show_missing = true
exclude_lines = [
    "if __name__",
    "pragma: no cover",
]

[tool.ty.environment]
python-version = "3.13"

[tool.pyscv]
# Supply-chain verification trust anchors
repo-slug = "IvanAnishchuk/geek42"
tag-prefix = "v"
release-workflow = "release.yml"
oidc-issuer = "https://token.actions.githubusercontent.com"
identity-template = "https://github.com/{repo_slug}/.github/workflows/{release_workflow}@refs/tags/{tag_prefix}{version}"
use-testpypi = true  # set to false for production releases
dist-dir = "dist"
proofs-dir = "proofs"
